# gen_value

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: experimental.rs
benchmark/: Cargo.toml
gen_value/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
gen_value/src/: index.rs  lib.rs  unmanaged.rs  vec.rs
src/: index.rs  lib.rs  unmanaged.rs  vec.rs
