[package]
authors = ["Bryant Luk <code@bryantluk.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "benchmark"
publish = false
readme = "README.md"
repository = "https://github.com/bluk/gen_value"
version = "0.6.0"

[dependencies]
gen_value = { path = "../gen_value", features = ["std"] }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8"

[[bench]]
name = "experimental"
harness = false